tests/paczka1/fuzzy1/92474923.err
Error in line 1: A84 A703 78,9
Error in line 2: A84 A84 59,3
Error in line 10: WICrXk5 A347 84,5
Error in line 13: WICrXk5 A703 52,0
Error in line 29: WICrXk5 A84 5,4
Error in line 34: GWqIfF5ox2 A347 67,8
Error in line 27: fjO A84 54,1
